# Topological-States

./: .gitignore  README.rst  setup.cfg  setup.py
VedantCode/: 0d.ipynb  honeycomb2x2.ipynb  n by n.ipynb
data/cases/: MOF.json  germanene.json  graphene.json  silicene.json
data/structures/: honeycomb.json  honeycomb_2x2.json  kagome.json  lieb.json
notebooks/examples/: chern_invariant.ipynb  clebsch_gordan.ipynb  honeycomb_bulk.ipynb  honeycomb_edge.ipynb  kagome_bulk.ipynb  kagome_edge.ipynb
notebooks/project/: mean_field_problem.py
notebooks/project/acceptor/honeycomb/: acceptor_bulk.ipynb  acceptor_bulk_interaction.ipynb  acceptor_edge.ipynb  acceptor_edge_interactions.ipynb  free_energy_minimisation.ipynb  occupation_minimisation.ipynb
notebooks/project/acceptor/kagome/: acceptor_bulk.ipynb  acceptor_bulk_interactions.ipynb  acceptor_edge.ipynb  acceptor_edge_interactions.ipynb  occupation_minimisation.ipynb
notebooks/project/group_IV/honeycomb/: germanene_bulk.ipynb  germanene_edge.ipynb  graphene_bulk.ipynb  graphene_edge.ipynb  honeycomb_edge_interactions.ipynb  silicene_bulk.ipynb  silicene_edge.ipynb
notebooks/project/group_IV/kagome/: kagome_bulk.ipynb  kagome_edge.ipynb  metal_organic_bulk.ipynb  metal_organic_bulk_SOC.ipynb  metal_organic_edge.ipynb  (+1 more)
src/: 0d_LDOSold copy.ipynb  0d_LDOSold.ipynb  0d_island.ipynb  0d_island_setup.ipynb  0d_plots.ipynb  0dkm_island.ipynb  Coursework_2_(IN_MORE_PROGRESS) copy.ipynb
src/topological_insulator/: __init__.py
src/topological_insulator/python/: __init__.py  main.py  model_options.py  parameter.py
(+16 files in other folders)
