[metadata]
name = topological_insulator
version = 1.0.0
license = AGPL-3.0
description = Acceptor arrays in topologically implanted 2D devices
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Javier Larrain Garcia-Perate
author_email = javier.lgpke@gmail.com
supervisor = Dr. Andrew J. Fisher

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
   numpy
   scipy
   sympy
   matplotlib
   ipykernel
   IPython

[options.packages.find]
where = src